Fixed Mobile mood, fixed profile/account tab button spacing for iphone 12 max pro mary.

--- a/pocs-capstone/frontend/src/components/AccountProfileTabMobile/AccountProfilePageMobile.css
+++ b/pocs-capstone/frontend/src/components/AccountProfileTabMobile/AccountProfilePageMobile.css
@@ -8,9 +8,22 @@
     margin-bottom: auto;
 }
 
+/* Iphone 12 Pro Max ShoutOut Mary */
+@media only screen and (min-height: 926px) {
+    .account-profile-container-mobile {
+        /* margin: 10px; */
+        /* width: 100vw;
+        height: 100vh; */
+        /* justify-content: center;
+        align-items: center; */
+        margin-top: 60px;
+        margin-bottom: 65px;
+    }
+}
+
 .profile-account-button-mobile {
     width: 80vw;
-    margin: 10px;
+    margin: 15px;
     background-color: pink;
     color:black;   
 }
@@ -21,7 +34,7 @@
     align-items: center; */
     /* margin:10px; */
     width: 80vw;
-    margin: 10px;
+    margin: 15px;
     background-color: pink;
     color:black;
     
@@ -31,7 +44,7 @@
 .canvas-button-mobile {
     
     width: 80vw;
-    margin: 10px;
+    margin: 15px;
     background-color: pink;
     color:black;
 
@@ -39,7 +52,7 @@
 
 .logout-button-mobile {
     width: 80vw;
-    margin: 10px;
+    margin: 15px;
     background-color: pink;
     color:black;
     
